--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "scripts": {
-    "echo:nojekyll": "touch ./docs/.nojekyll",
-    "echo": "npm-run-all -p echo:nojekyll",
-    "copy:html": "cp ./src/index.html ./docs",
+    "clean": "rimraf ./docs && mkdirp docs",
+    "copy:html": "ncp ./src/index.html ./docs/index.html",
+    "copy:js": "ncp ./src/main.js ./docs/main.js",
     "copy": "npm-run-all -p copy:*",
-    "watch:js": "webpack --mode development ./src/js/index.js --output ./docs/js/main.js --watch --display minimal",
-    "watch:sass": "node-sass --include-path sass ./src/sass/style.sass ./docs/css/style.css --watch --quiet",
-    "watch:server": "browser-sync start --server ./docs --files \"**/*\"",
+    "watch:elm": "elm-live ./src/elm/Main.elm --open --start-page=index.html --dir=docs -- --output=./docs/elm.js",
+    "watch:sass": "node-sass ./src/style.sass ./docs/style.css && node-sass ./src/style.sass ./docs/style.css -w -q",
     "watch": "npm-run-all -p watch:*",
-    "start": "npm-run-all -s echo copy watch"
-  },
-  "dependencies": {
-    "@hyperapp/html": "^1.1.1",
-    "axios": "^0.18.0",
-    "hyperapp": "^2.0.0-alpha.1"
+    "compile:elm": "elm make src/elm/Main.elm --optimize --output=./docs/elm.js",
+    "compile:sass": "node-sass ./src/style.sass ./docs/style.css --output-style compressed",
+    "compile": "npm-run-all -p compile:*",
+    "minify:elm": "google-closure-compiler --js=./docs/elm.js --js_output_file=./docs/elm.closure.min.js && ncp ./docs/elm.closure.min.js ./docs/elm.js && rm ./docs/elm.closure.min.js",
+    "build": "npm-run-all -s clean copy compile minify:elm",
+    "start": "npm-run-all -s clean copy watch"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.3",
-    "node-sass": "^4.11.0",
+    "elm": "^0.19.0-no-deps",
+    "elm-live": "^3.4.1",
+    "elm-test": "^0.19.0-rev6",
+    "google-closure-compiler": "^20190528.0.0",
+    "ncp": "^2.0.0",
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0"
+    "rimraf": "^2.6.3"
   }
 }
